--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -10,136 +10,167 @@
         android:id="@+id/signup_certif_tv"
         android:layout_width="146dp"
         android:layout_height="18dp"
+        android:layout_marginStart="56dp"
         android:text="본인인증"
-        tools:layout_editor_absoluteX="56dp"
-        tools:layout_editor_absoluteY="418dp" />
+        app:layout_constraintBottom_toTopOf="@+id/signup_certif_btn"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/signup_pw_warn"
         android:layout_width="146dp"
         android:layout_height="18dp"
+        android:layout_marginStart="56dp"
+        android:layout_marginBottom="12dp"
         android:text="TextView"
-        tools:layout_editor_absoluteX="56dp"
-        tools:layout_editor_absoluteY="297dp" />
+        app:layout_constraintBottom_toTopOf="@+id/signup_pw2_tv"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/signup_email_warn"
         android:layout_width="146dp"
         android:layout_height="18dp"
+        android:layout_marginStart="56dp"
+        android:layout_marginBottom="12dp"
         android:text="TextView"
-        tools:layout_editor_absoluteX="56dp"
-        tools:layout_editor_absoluteY="203dp" />
+        app:layout_constraintBottom_toTopOf="@+id/signup_pw_tv"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/signup_bt"
+        android:id="@+id/signup_btn"
         android:layout_width="213dp"
         android:layout_height="41dp"
+        android:layout_marginStart="56dp"
+        android:layout_marginBottom="104dp"
         android:text="회원가입"
-        tools:layout_editor_absoluteX="56dp"
-        tools:layout_editor_absoluteY="586dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="TouchTargetSizeCheck" />
 
     <EditText
         android:id="@+id/signup_email_et"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="57dp"
         android:ems="10"
         android:hint="이메일을 입력하세요."
         android:inputType="textEmailAddress"
-        tools:layout_editor_absoluteX="56dp"
-        tools:layout_editor_absoluteY="158dp" />
+        app:layout_constraintBottom_toTopOf="@+id/signup_email_warn"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="TouchTargetSizeCheck" />
 
     <TextView
         android:id="@+id/signup_email_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="57dp"
         android:text="이메일"
-        tools:layout_editor_absoluteX="56dp"
-        tools:layout_editor_absoluteY="139dp" />
+        app:layout_constraintBottom_toTopOf="@+id/signup_email_et"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/signup_pw_et"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="56dp"
         android:ems="10"
         android:hint="비밀번호를 입력하세요."
         android:inputType="textPassword"
-        tools:layout_editor_absoluteX="56dp"
-        tools:layout_editor_absoluteY="252dp" />
+        app:layout_constraintBottom_toTopOf="@+id/signup_pw_warn"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="TouchTargetSizeCheck" />
 
     <TextView
         android:id="@+id/signup_pw_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="56dp"
         android:text="비밀번호"
-        tools:layout_editor_absoluteX="56dp"
-        tools:layout_editor_absoluteY="233dp" />
+        app:layout_constraintBottom_toTopOf="@+id/signup_pw_et"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/signup_pw2_et"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="56dp"
         android:ems="10"
         android:hint="비밀번호를 입력하세요."
         android:inputType="textPassword"
-        tools:layout_editor_absoluteX="56dp"
-        tools:layout_editor_absoluteY="346dp" />
+        app:layout_constraintBottom_toTopOf="@+id/signup_pw2_warn"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="TouchTargetSizeCheck" />
 
     <TextView
         android:id="@+id/signup_pw2_warn"
         android:layout_width="146dp"
         android:layout_height="18dp"
+        android:layout_marginStart="56dp"
+        android:layout_marginBottom="9dp"
         android:text="TextView"
-        tools:layout_editor_absoluteX="56dp"
-        tools:layout_editor_absoluteY="391dp" />
+        app:layout_constraintBottom_toTopOf="@+id/signup_certif_tv"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/signup_pw2_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="56dp"
         android:text="비밀번호 확인"
-        tools:layout_editor_absoluteX="56dp"
-        tools:layout_editor_absoluteY="327dp" />
+        app:layout_constraintBottom_toTopOf="@+id/signup_pw2_et"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/signup_certif_bt"
+        android:id="@+id/signup_certif_btn"
         android:layout_width="213dp"
         android:layout_height="41dp"
+        android:layout_marginStart="53dp"
+        android:layout_marginBottom="18dp"
         android:text="휴대폰 인증"
-        tools:layout_editor_absoluteX="53dp"
-        tools:layout_editor_absoluteY="436dp" />
+        app:layout_constraintBottom_toTopOf="@+id/signup_name_tv"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="TouchTargetSizeCheck" />
 
     <EditText
         android:id="@+id/editTextTextPersonName2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="56dp"
         android:ems="10"
         android:hint="닉네임울 입력하세요."
         android:inputType="textPersonName"
-        tools:layout_editor_absoluteX="56dp"
-        tools:layout_editor_absoluteY="514dp" />
+        app:layout_constraintBottom_toTopOf="@+id/signup_name_warn"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />
 
     <TextView
         android:id="@+id/signup_name_warn"
         android:layout_width="146dp"
         android:layout_height="18dp"
+        android:layout_marginStart="56dp"
+        android:layout_marginBottom="9dp"
         android:text="TextView"
-        tools:layout_editor_absoluteX="56dp"
-        tools:layout_editor_absoluteY="559dp" />
+        app:layout_constraintBottom_toTopOf="@+id/signup_btn"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/signup_name_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="56dp"
         android:text="닉네임"
-        tools:layout_editor_absoluteX="56dp"
-        tools:layout_editor_absoluteY="495dp" />
+        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName2"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/signup_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="179dp"
+        android:layout_marginTop="92dp"
         android:text="회원가입"
-        tools:layout_editor_absoluteX="139dp"
-        tools:layout_editor_absoluteY="92dp" />
+        app:layout_constraintBottom_toTopOf="@+id/signup_email_tv"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
