--- a/app/src/main/res/layout/fragment_category1.xml
+++ b/app/src/main/res/layout/fragment_category1.xml
@@ -2,25 +2,39 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/category1_example_cv"
-        android:layout_width="300dp"
-        android:layout_height="420dp"
-        app:cardElevation="0dp"
-        app:cardCornerRadius="50dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+<!--    <androidx.cardview.widget.CardView-->
+<!--        android:id="@+id/category1_example_cv"-->
+<!--        android:layout_width="300dp"-->
+<!--        android:layout_height="420dp"-->
+<!--        app:cardElevation="0dp"-->
+<!--        app:cardCornerRadius="50dp"-->
+<!--        app:layout_constraintTop_toTopOf="parent"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent">-->
 
-    <ImageView
-        android:id="@+id/category1_example_iv"
+<!--    <ImageView-->
+<!--        android:id="@+id/category1_example_iv"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:src="@drawable/example"/>-->
+
+<!--</androidx.cardview.widget.CardView>-->
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/category1_calumn_rv"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:src="@drawable/example"/>
+        android:layout_height="250dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        android:orientation="horizontal"
+        tools:listitem="@layout/item_info"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
 
-</androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
