--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    app:layoutDescription="@xml/activity_login_scene">
 
     <EditText
         android:id="@+id/login_email_et"
@@ -15,8 +16,7 @@
         android:hint="이메일 주소를 입력하세요."
         android:inputType="textPersonName"
         app:layout_constraintBottom_toTopOf="@+id/login_pw_tv"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="TouchTargetSizeCheck" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/login_title"
@@ -47,8 +47,7 @@
         android:hint="비밀번호를 입력하세요."
         android:inputType="textPersonName"
         app:layout_constraintBottom_toTopOf="@+id/login_btn"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="TouchTargetSizeCheck" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/login_btn"
@@ -58,8 +57,7 @@
         android:layout_marginBottom="6dp"
         android:text="로그인"
         app:layout_constraintBottom_toTopOf="@+id/login_signup_tvb"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="TouchTargetSizeCheck" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/login_pw_tv"
