--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -7,50 +7,32 @@
     tools:context=".MainActivity">
 
     <TextView
-        android:id="@+id/signup_certif_tv"
-        android:layout_width="146dp"
-        android:layout_height="18dp"
-        android:layout_marginStart="56dp"
-        android:text="본인인증"
-        app:layout_constraintBottom_toTopOf="@+id/signup_certif_btn"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/signup_pw_warn"
-        android:layout_width="146dp"
-        android:layout_height="18dp"
-        android:layout_marginStart="56dp"
-        android:layout_marginBottom="12dp"
-        android:text="TextView"
-        app:layout_constraintBottom_toTopOf="@+id/signup_pw2_tv"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/signup_email_warn"
-        android:layout_width="146dp"
-        android:layout_height="18dp"
-        android:layout_marginStart="56dp"
-        android:layout_marginBottom="12dp"
-        android:text="TextView"
-        app:layout_constraintBottom_toTopOf="@+id/signup_pw_tv"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <Button
-        android:id="@+id/signup_btn"
-        android:layout_width="213dp"
-        android:layout_height="41dp"
-        android:layout_marginStart="56dp"
-        android:layout_marginBottom="104dp"
+        android:id="@+id/signup_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="176dp"
         android:text="회원가입"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/signup_email_tv"
         app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="TouchTargetSizeCheck" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.744" />
+
+    <TextView
+        android:id="@+id/signup_email_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="84dp"
+        android:layout_marginBottom="4dp"
+        android:text="이메일"
+        app:layout_constraintBottom_toTopOf="@+id/signup_email_et"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/signup_email_et"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="57dp"
+        android:layout_marginStart="84dp"
+        android:layout_marginBottom="4dp"
         android:ems="10"
         android:hint="이메일을 입력하세요."
         android:inputType="textEmailAddress"
@@ -59,19 +41,31 @@
         tools:ignore="TouchTargetSizeCheck" />
 
     <TextView
-        android:id="@+id/signup_email_tv"
+        android:id="@+id/signup_email_warn"
+        android:layout_width="146dp"
+        android:layout_height="18dp"
+        android:layout_marginStart="84dp"
+        android:layout_marginBottom="8dp"
+        android:text="TextView"
+        app:layout_constraintBottom_toTopOf="@+id/signup_pw_tv"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/signup_pw_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="57dp"
-        android:text="이메일"
-        app:layout_constraintBottom_toTopOf="@+id/signup_email_et"
+        android:layout_marginStart="84dp"
+        android:layout_marginBottom="4dp"
+        android:text="비밀번호"
+        app:layout_constraintBottom_toTopOf="@+id/signup_pw_et"
         app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/signup_pw_et"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="56dp"
+        android:layout_marginStart="84dp"
+        android:layout_marginBottom="8dp"
         android:ems="10"
         android:hint="비밀번호를 입력하세요."
         android:inputType="textPassword"
@@ -80,19 +74,31 @@
         tools:ignore="TouchTargetSizeCheck" />
 
     <TextView
-        android:id="@+id/signup_pw_tv"
+        android:id="@+id/signup_pw_warn"
+        android:layout_width="146dp"
+        android:layout_height="18dp"
+        android:layout_marginStart="84dp"
+        android:layout_marginBottom="24dp"
+        android:text="TextView"
+        app:layout_constraintBottom_toTopOf="@+id/signup_pw2_tv"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/signup_pw2_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="56dp"
-        android:text="비밀번호"
-        app:layout_constraintBottom_toTopOf="@+id/signup_pw_et"
+        android:layout_marginStart="84dp"
+        android:layout_marginBottom="4dp"
+        android:text="비밀번호 확인"
+        app:layout_constraintBottom_toTopOf="@+id/signup_pw2_et"
         app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/signup_pw2_et"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="56dp"
+        android:layout_marginStart="84dp"
+        android:layout_marginBottom="8dp"
         android:ems="10"
         android:hint="비밀번호를 입력하세요."
         android:inputType="textPassword"
@@ -104,37 +110,57 @@
         android:id="@+id/signup_pw2_warn"
         android:layout_width="146dp"
         android:layout_height="18dp"
-        android:layout_marginStart="56dp"
-        android:layout_marginBottom="9dp"
+        android:layout_marginStart="84dp"
+        android:layout_marginBottom="4dp"
         android:text="TextView"
         app:layout_constraintBottom_toTopOf="@+id/signup_certif_tv"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/signup_pw2_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="56dp"
-        android:text="비밀번호 확인"
-        app:layout_constraintBottom_toTopOf="@+id/signup_pw2_et"
+        android:id="@+id/signup_certif_tv"
+        android:layout_width="146dp"
+        android:layout_height="18dp"
+        android:layout_marginStart="84dp"
+        android:layout_marginBottom="4dp"
+        android:text="본인인증"
+        app:layout_constraintBottom_toTopOf="@+id/signup_certif_btn"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/signup_certif_btn"
         android:layout_width="213dp"
         android:layout_height="41dp"
-        android:layout_marginStart="53dp"
-        android:layout_marginBottom="18dp"
+        android:layout_marginStart="84dp"
         android:text="휴대폰 인증"
-        app:layout_constraintBottom_toTopOf="@+id/signup_name_tv"
+        app:layout_constraintBottom_toTopOf="@+id/signup_certif_warn"
         app:layout_constraintStart_toStartOf="parent"
         tools:ignore="TouchTargetSizeCheck" />
 
-    <EditText
-        android:id="@+id/editTextTextPersonName2"
+    <TextView
+        android:id="@+id/signup_certif_warn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="84dp"
+        android:text="textview"
+        app:layout_constraintBottom_toTopOf="@+id/signup_name_tv"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/signup_name_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="56dp"
+        android:layout_marginStart="84dp"
+        android:layout_marginBottom="4dp"
+        android:text="닉네임"
+        app:layout_constraintBottom_toTopOf="@+id/signup_name_et"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <EditText
+        android:id="@+id/signup_name_et"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="84dp"
+        android:layout_marginBottom="8dp"
         android:ems="10"
         android:hint="닉네임울 입력하세요."
         android:inputType="textPersonName"
@@ -146,31 +172,21 @@
         android:id="@+id/signup_name_warn"
         android:layout_width="146dp"
         android:layout_height="18dp"
-        android:layout_marginStart="56dp"
-        android:layout_marginBottom="9dp"
+        android:layout_marginStart="84dp"
+        android:layout_marginBottom="8dp"
         android:text="TextView"
         app:layout_constraintBottom_toTopOf="@+id/signup_btn"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <TextView
-        android:id="@+id/signup_name_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="56dp"
-        android:text="닉네임"
-        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName2"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/signup_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="179dp"
-        android:layout_marginTop="92dp"
+    <Button
+        android:id="@+id/signup_btn"
+        android:layout_width="213dp"
+        android:layout_height="41dp"
+        android:layout_marginStart="84dp"
+        android:layout_marginBottom="16dp"
         android:text="회원가입"
-        app:layout_constraintBottom_toTopOf="@+id/signup_email_tv"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        tools:ignore="TouchTargetSizeCheck" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
