--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,11 +11,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="100dp"
-        android:layout_marginBottom="24dp"
         android:ems="10"
         android:hint="이메일 주소를 입력하세요."
         android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/login_pw_tv"
+        app:layout_constraintBottom_toTopOf="@+id/login_email_warn"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
@@ -42,11 +41,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="103dp"
-        android:layout_marginBottom="35dp"
         android:ems="10"
         android:hint="비밀번호를 입력하세요."
-        android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/login_btn"
+        android:inputType="textPassword"
+        app:layout_constraintBottom_toTopOf="@+id/login_pw_warn"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
@@ -89,5 +87,25 @@
         android:text="비밀번호 찾기"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
+    <TextView
+        android:id="@+id/login_email_warn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="100dp"
+        android:layout_marginBottom="19dp"
+        android:hint="TextView"
+        app:layout_constraintBottom_toTopOf="@+id/login_pw_tv"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/login_pw_warn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="100dp"
+        android:layout_marginBottom="16dp"
+        android:hint="TextView"
+        app:layout_constraintBottom_toTopOf="@+id/login_btn"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
