--- a/app/src/main/res/layout/fragment_category1.xml
+++ b/app/src/main/res/layout/fragment_category1.xml
@@ -32,7 +32,7 @@
             android:layout_marginTop="20dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             android:orientation="horizontal"
-            tools:listitem="@layout/item_info"
+            tools:listitem="@layout/item_column"
             app:layout_constraintTop_toBottomOf="@id/category1_title_tv"
             app:layout_constraintStart_toStartOf="parent"/>
 
