--- a/app/src/main/res/layout/item_column.xml
+++ b/app/src/main/res/layout/item_column.xml
@@ -6,7 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/item_info_main_cv"
+        android:id="@+id/item_column_main_cv"
         android:layout_width="150dp"
         android:layout_height="150dp"
         app:cardElevation="0dp"
@@ -15,7 +15,7 @@
         app:layout_constraintStart_toStartOf="parent">
 
         <ImageView
-            android:id="@+id/item_info_main_iv"
+            android:id="@+id/item_column_main_iv"
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:src="@drawable/example"
@@ -24,14 +24,14 @@
     </androidx.cardview.widget.CardView>
 
     <TextView
-        android:id="@+id/item_info_title_tv"
+        android:id="@+id/item_column_title_tv"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_margin="5dp"
         android:text="예시예시예시"
         android:textSize="20sp"
         android:textColor="@color/black"
-        app:layout_constraintTop_toBottomOf="@id/item_info_main_cv"/>
+        app:layout_constraintTop_toBottomOf="@id/item_column_main_cv"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
