--- a/app/src/main/res/layout/fragment_columns.xml
+++ b/app/src/main/res/layout/fragment_columns.xml
@@ -15,18 +15,23 @@
             android:id="@+id/columns_title_tv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="16dp"
+            android:fontFamily="@font/nixgon_bold"
             android:text="카테고리"
-            android:textSize="40sp"
             android:textColor="@color/black"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
+            android:textSize="30sp"
+            android:paddingBottom="10dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-            <androidx.constraintlayout.widget.ConstraintLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/columns_test_clayout"
                 android:layout_width="match_parent"
                 android:layout_height="80dp"
+                android:layout_marginTop="10dp"
                 android:padding="10dp"
+                android:background="@drawable/round_white"
+                android:backgroundTint="@color/puple2"
                 app:layout_constraintTop_toBottomOf="@id/columns_title_tv">
 
                 <TextView
@@ -48,14 +53,17 @@
                     android:layout_margin="5dp"
                     android:text="나에게 가장 잘 맞는 생리대를 찾아보자!"
                     android:textSize="15sp"
+                    android:textColor="#9981E9"
                     app:layout_constraintTop_toBottomOf="@id/columns_test_main_tv"
                     app:layout_constraintStart_toStartOf="@id/columns_test_main_tv"/>
 
                 <ImageView
                     android:id="@+id/columns_test_iv"
-                    android:layout_width="80dp"
-                    android:layout_height="80dp"
-                    android:src="@drawable/ic_launcher_foreground"
+                    android:layout_width="50dp"
+                    android:layout_height="60dp"
+                    android:src="@drawable/puple_girls"
+                    android:scaleType="fitCenter"
+                    android:layout_marginRight="15dp"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"/>
 
@@ -65,8 +73,11 @@
             android:id="@+id/columns_category1_clayout"
             android:layout_width="180dp"
             android:layout_height="180dp"
-            android:layout_margin="10dp"
-            android:background="#C295CA"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/round_white"
+            android:backgroundTint="#FA8E46"
             app:layout_constraintTop_toBottomOf="@id/columns_test_clayout"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@id/columns_category2_clayout">
@@ -76,7 +87,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
-                android:layout_marginTop="15dp"
+                android:layout_marginTop="20dp"
+                android:paddingBottom="5dp"
                 android:text="내 몸의 변화"
                 android:textSize="18sp"
                 android:textColor="@color/black"
@@ -108,8 +120,10 @@
             android:id="@+id/columns_category2_clayout"
             android:layout_width="180dp"
             android:layout_height="180dp"
-            android:layout_margin="10dp"
-            android:background="#C295CA"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="20dp"            android:background="@drawable/round_white"
+            android:backgroundTint="#94D6C2"
             app:layout_constraintTop_toBottomOf="@id/columns_test_clayout"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/columns_category1_clayout">
@@ -119,7 +133,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
-                android:layout_marginTop="15dp"
+                android:layout_marginTop="20dp"
+                android:paddingBottom="5dp"
                 android:text="콤플렉스에 대하여"
                 android:textSize="18sp"
                 android:textColor="@color/black"
@@ -133,7 +148,7 @@
                 android:layout_height="wrap_content"
                 android:text="나의 몸과 행복해지기"
                 android:textSize="14sp"
-                android:textColor="@color/white"
+                android:textColor="#2DAF81"
                 app:layout_constraintStart_toStartOf="@id/columns_category2_main_tv"
                 app:layout_constraintTop_toBottomOf="@id/columns_category2_main_tv"/>
 
@@ -151,8 +166,10 @@
             android:id="@+id/columns_category3_clayout"
             android:layout_width="180dp"
             android:layout_height="180dp"
-            android:layout_margin="10dp"
-            android:background="#C295CA"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="20dp"            android:background="@drawable/round_white"
+            android:backgroundTint="#FFC9B4"
             app:layout_constraintTop_toBottomOf="@id/columns_category1_clayout"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@id/columns_category4_clayout">
@@ -162,7 +179,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
-                android:layout_marginTop="15dp"
+                android:layout_marginTop="20dp"
+                android:paddingBottom="5dp"
                 android:text="감정과 행동"
                 android:textSize="18sp"
                 android:textColor="@color/black"
@@ -176,7 +194,7 @@
                 android:layout_height="wrap_content"
                 android:text="냐는 누구일까?"
                 android:textSize="14sp"
-                android:textColor="@color/white"
+                android:textColor="#D36666"
                 app:layout_constraintStart_toStartOf="@id/columns_category3_main_tv"
                 app:layout_constraintTop_toBottomOf="@id/columns_category3_main_tv"/>
 
@@ -194,42 +212,46 @@
             android:id="@+id/columns_category4_clayout"
             android:layout_width="180dp"
             android:layout_height="180dp"
-            android:layout_margin="10dp"
-            android:background="#C295CA"
-            app:layout_constraintTop_toBottomOf="@id/columns_category2_clayout"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/round_white"
+            android:backgroundTint="#D9CFF8"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/columns_category3_clayout"
-            app:layout_constraintEnd_toEndOf="parent">
+            app:layout_constraintTop_toBottomOf="@id/columns_category2_clayout">
 
             <TextView
                 android:id="@+id/columns_category4_main_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
-                android:layout_marginTop="15dp"
+                android:layout_marginTop="20dp"
+                android:paddingBottom="5dp"
                 android:text="건강한 성생활"
-                android:textSize="18sp"
                 android:textColor="@color/black"
+                android:textSize="18sp"
                 android:textStyle="bold"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"/>
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/columns_category4_sub_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="안전하게 섹스하기"
+                android:textColor="#9981E9"
                 android:textSize="14sp"
-                android:textColor="@color/white"
                 app:layout_constraintStart_toStartOf="@id/columns_category4_main_tv"
-                app:layout_constraintTop_toBottomOf="@id/columns_category4_main_tv"/>
+                app:layout_constraintTop_toBottomOf="@id/columns_category4_main_tv" />
 
             <ImageView
                 android:id="@+id/columns_category4_iv"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:src="@drawable/ic_launcher_foreground"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -237,8 +259,10 @@
             android:id="@+id/columns_category5_clayout"
             android:layout_width="180dp"
             android:layout_height="180dp"
-            android:layout_margin="10dp"
-            android:background="#C295CA"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="20dp"            android:background="@drawable/round_white"
+            android:backgroundTint="#94D6C2"
             app:layout_constraintTop_toBottomOf="@id/columns_category3_clayout"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@id/columns_category6_clayout">
@@ -248,7 +272,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
-                android:layout_marginTop="15dp"
+                android:layout_marginTop="20dp"
+                android:paddingBottom="5dp"
                 android:text="건강관리"
                 android:textSize="18sp"
                 android:textColor="@color/black"
@@ -262,7 +287,7 @@
                 android:layout_height="wrap_content"
                 android:text="나를 위해 챙겨야 할 것"
                 android:textSize="14sp"
-                android:textColor="@color/white"
+                android:textColor="#2DAF81"
                 app:layout_constraintStart_toStartOf="@id/columns_category5_main_tv"
                 app:layout_constraintTop_toBottomOf="@id/columns_category5_main_tv"/>
 
@@ -280,42 +305,46 @@
             android:id="@+id/columns_category6_clayout"
             android:layout_width="180dp"
             android:layout_height="180dp"
-            android:layout_margin="10dp"
-            android:background="#C295CA"
-            app:layout_constraintTop_toBottomOf="@id/columns_category4_clayout"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/round_white"
+            android:backgroundTint="#FFC9B4"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/columns_category5_clayout"
-            app:layout_constraintEnd_toEndOf="parent">
+            app:layout_constraintTop_toBottomOf="@id/columns_category4_clayout">
 
             <TextView
                 android:id="@+id/columns_category6_main_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
-                android:layout_marginTop="15dp"
+                android:layout_marginTop="20dp"
+                android:paddingBottom="5dp"
                 android:text="그게 무슨 뜻이야?"
-                android:textSize="18sp"
                 android:textColor="@color/black"
+                android:textSize="18sp"
                 android:textStyle="bold"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"/>
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/column_category6_sub_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="그 단어의 의미"
+                android:textColor="#D36666"
                 android:textSize="14sp"
-                android:textColor="@color/white"
                 app:layout_constraintStart_toStartOf="@id/columns_category6_main_tv"
-                app:layout_constraintTop_toBottomOf="@id/columns_category6_main_tv"/>
+                app:layout_constraintTop_toBottomOf="@id/columns_category6_main_tv" />
 
             <ImageView
                 android:id="@+id/columns_category6_iv"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:src="@drawable/ic_launcher_foreground"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
