--- a/app/src/main/res/drawable/round_greybtn.xml
+++ b/app/src/main/res/drawable/round_greybtn.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<?xml version="1.0" encoding="utf-8"?>
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@color/white"/>
+    <solid android:color="#E6E6E6"/>
+    <stroke android:color="#dedede"
+        android:width="7.5px"/>
 
     <corners
-        android:radius="15dp"/>
+        android:radius="100dp"/>
 
 </shape>
