--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.MapForGirls" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.MapForGirls" parent="Theme.AppCompat.DayNight.DarkActionBar">
         <!-- 상태바와 타이틀바 없앰 -->
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
